bootstrap-sass-asset-helper

--- a/styles/bootstrap/_variables.scss
+++ b/styles/bootstrap/_variables.scss
@@ -1,4 +1,4 @@
-$bootstrap-sass-asset-helper: false !default;
+$bootstrap-sass-asset-helper: true !default;
 
 $gray-base:              #000 !default;
 $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
